* change host * change ngrok account * change run script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app/src/Server.js",
+        "start": "node --no-experimental-fetch app/src/Server.js",
         "compile": "npx browserify public/sfu/MediasoupClientCompile.js -o public/sfu/MediasoupClient.js",
         "lint": "npx prettier --write ."
     },
