--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "author": "Featly Inc",
     "license": "AGPL-3.0",
     "dependencies": {
+        "@sentry/integrations": "7.36.0",
+        "@sentry/node": "7.36.0",
         "body-parser": "1.20.1",
-        "compression": "1.7.4",
         "colors": "1.4.0",
+        "compression": "1.7.4",
         "cors": "2.8.5",
         "crypto-js": "4.1.1",
         "express": "4.18.2",
         "httpolyglot": "0.1.2",
-        "mediasoup": "3.11.8",
+        "mediasoup": "^3.12.8",
         "mediasoup-client": "3.6.75",
         "ngrok": "4.3.3",
         "qs": "6.11.0",
-        "@sentry/node": "7.36.0",
-        "@sentry/integrations": "7.36.0",
         "socket.io": "4.5.4",
         "swagger-ui-express": "4.6.0",
         "uuid": "9.0.0",
